--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,7 +5,7 @@
 * {
     padding: 0;
     margin: 0;
-    background: rgb(32, 32, 32);
-    color: white;
-    font-family: "Red Hat Display";
+    height: 100%;
+    width: 100%;
+    font-family: "Quicksand";
 }
